GNOME Bugzilla – Bug 683040
crash in new overview
Last modified: 2012-08-31 16:32:50 UTC
I clicked on a site in the overview and got this crash: Program terminated with signal 6, Aborted.
+ Trace 230761
(gdb)
Hm, this looks mostly like an a11y crash? We don't manipulate in any way the iconview accessible..
OK, apparently we're emitting a signal from the wrong thread. I'll fix this.
This should do.
And by "this", I mean fa28ea0cb723ca4e30ea2447425ddcb30317ab96