ephy-history-service: Do not emit signals from the history service thread

We were naively emitting a few signals from the history service thread
while doing this is not thread safe. Add a few helper methods to run
this in a main loop idle.

https://bugzilla.gnome.org/show_bug.cgi?id=683040